{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 11,
  "lineage": "8b029b21-4708-ef21-9e47-949803e76848",
  "resources": [
    {
      "module": "module.main.module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062355a529d6089c",
            "arn": "arn:aws:ec2:us-east-1:570394221768:instance/i-0dba923828c0912a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "default-bastion-instance-profile",
            "id": "i-0dba923828c0912a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a251e4747975d17",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-52-91-211-20.compute-1.amazonaws.com",
            "public_ip": "52.91.211.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f5376d6f15199af6",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bfbbab2da22ed13",
            "tags": {
              "Name": "default-bastion"
            },
            "tags_all": {
              "Name": "default-bastion",
              "env": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0881fcf49c11ae7d9"
            ]
          },
          "dependencies": [
            "module.main.module.bastion.aws_iam_instance_profile.this",
            "module.main.module.bastion.aws_iam_role.this",
            "module.main.module.bastion.data.aws_ami.amazon-linux-2",
            "module.main.module.rds.aws_db_instance.this",
            "module.main.module.rds.aws_db_subnet_group.this",
            "module.main.module.rds.aws_security_group.this",
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.sg.aws_security_group.app",
            "module.main.module.vpc.aws_subnet.private",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:security-group/sg-090eb9707de6b7152",
            "description": "Allows inbound access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090eb9707de6b7152",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0881fcf49c11ae7d9"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "default-elasticache-sg",
            "name_prefix": "",
            "owner_id": "570394221768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.sg.aws_security_group.app",
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.lb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:listener/app/default-alb/33b8a39a78d2742b/eceed4b9670623b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:570394221768:listener/app/default-alb/33b8a39a78d2742b/eceed4b9670623b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:loadbalancer/app/default-alb/33b8a39a78d2742b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "env": "default"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.lb.aws_alb_target_group.this",
            "module.main.module.lb.aws_lb.this",
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.lb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:listener/app/default-alb/33b8a39a78d2742b/e40f1fd30edf5f1c",
            "certificate_arn": "arn:aws:acm:us-east-1:570394221768:certificate/9d9f4a8b-166c-4cc9-a358-e563074488cf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:570394221768:listener/app/default-alb/33b8a39a78d2742b/e40f1fd30edf5f1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:loadbalancer/app/default-alb/33b8a39a78d2742b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "env": "default"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.lb.aws_alb_target_group.this",
            "module.main.module.lb.aws_lb.this",
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:targetgroup/default-default-tg/ffa18c2922c7d0f8",
            "arn_suffix": "targetgroup/default-default-tg/ffa18c2922c7d0f8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/api/health-check/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:570394221768:targetgroup/default-default-tg/ffa18c2922c7d0f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "default-default-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "env": "default"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:570394221768:loadbalancer/app/default-alb/33b8a39a78d2742b",
            "arn_suffix": "app/default-alb/33b8a39a78d2742b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "default-alb-1336905416.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:570394221768:loadbalancer/app/default-alb/33b8a39a78d2742b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "default-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b7f40c0c7b77ee2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ca0fd4c261bb6af"
              },
              {
                "subnet_id": "subnet-094fafe10db7375d6"
              },
              {
                "subnet_id": "subnet-0ef8926b427a98e74"
              }
            ],
            "subnets": [
              "subnet-00ca0fd4c261bb6af",
              "subnet-094fafe10db7375d6",
              "subnet-0ef8926b427a98e74"
            ],
            "tags_all": {
              "env": "default"
            },
            "timeouts": {
              "create": "30m",
              "delete": "30m"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:security-group/sg-05ae175b5b35176eb",
            "description": "Allows inbound access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ae175b5b35176eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0881fcf49c11ae7d9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "default-rds-security-group",
            "name_prefix": "",
            "owner_id": "570394221768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.sg.aws_security_group.app",
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:security-group/sg-04b7f40c0c7b77ee2",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b7f40c0c7b77ee2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-alb-sg",
            "name_prefix": "",
            "owner_id": "570394221768",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:security-group/sg-0881fcf49c11ae7d9",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to this SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0881fcf49c11ae7d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04b7f40c0c7b77ee2"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from this SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-app-sg",
            "name_prefix": "",
            "owner_id": "570394221768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-ecs-sg"
            },
            "tags_all": {
              "Name": "default-ecs-sg",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.sg.aws_security_group.alb",
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:network-acl/acl-0b033bb4473f25f0f",
            "default_network_acl_id": "acl-0b033bb4473f25f0f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b033bb4473f25f0f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "570394221768",
            "subnet_ids": [
              "subnet-00bfbbab2da22ed13",
              "subnet-00ca0fd4c261bb6af",
              "subnet-06c2bd7c76378e247",
              "subnet-094fafe10db7375d6",
              "subnet-0c5df27bcc74f7c5f",
              "subnet-0ef8926b427a98e74"
            ],
            "tags": {
              "Name": "default-vpc-default"
            },
            "tags_all": {
              "Name": "default-vpc-default",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:route-table/rtb-0f26b0472f7df7f1a",
            "default_route_table_id": "rtb-0f26b0472f7df7f1a",
            "id": "rtb-0f26b0472f7df7f1a",
            "owner_id": "570394221768",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vpc-default"
            },
            "tags_all": {
              "Name": "default-vpc-default",
              "env": "default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:security-group/sg-0599e8afc3d0791ea",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0599e8afc3d0791ea",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "570394221768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-vpc-default"
            },
            "tags_all": {
              "Name": "default-vpc-default",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4ec54ddf6c78fdd",
            "association_id": "eipassoc-05711dec36e733b41",
            "domain": "vpc",
            "id": "eipalloc-0e4ec54ddf6c78fdd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a864c09b37d5c37d",
            "private_dns": "ip-10-0-101-238.ec2.internal",
            "private_ip": "10.0.101.238",
            "public_dns": "ec2-44-214-85-33.compute-1.amazonaws.com",
            "public_ip": "44.214.85.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "default-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-us-east-1a",
              "env": "default"
            },
            "vpc": true
          },
          "dependencies": [
            "module.main.module.vpc.aws_internet_gateway.this",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:internet-gateway/igw-0767483638ebabd30",
            "id": "igw-0767483638ebabd30",
            "owner_id": "570394221768",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4ec54ddf6c78fdd",
            "association_id": "eipassoc-05711dec36e733b41",
            "connectivity_type": "public",
            "id": "nat-085faab2611ae7a3e",
            "network_interface_id": "eni-0a864c09b37d5c37d",
            "private_ip": "10.0.101.238",
            "public_ip": "44.214.85.33",
            "subnet_id": "subnet-0ef8926b427a98e74",
            "tags": {
              "Name": "default-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-us-east-1a",
              "env": "default"
            }
          },
          "dependencies": [
            "module.main.module.vpc.aws_eip.nat",
            "module.main.module.vpc.aws_internet_gateway.this",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a31b94b1214cd2c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085faab2611ae7a3e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a31b94b1214cd2c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_eip.nat",
            "module.main.module.vpc.aws_internet_gateway.this",
            "module.main.module.vpc.aws_nat_gateway.this",
            "module.main.module.vpc.aws_route_table.private",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0767483638ebabd30",
            "id": "r-rtb-045c8f3097f06a7f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045c8f3097f06a7f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_internet_gateway.this",
            "module.main.module.vpc.aws_route_table.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:route-table/rtb-0a31b94b1214cd2c5",
            "id": "rtb-0a31b94b1214cd2c5",
            "owner_id": "570394221768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085faab2611ae7a3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-vpc-private"
            },
            "tags_all": {
              "Name": "default-vpc-private",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:route-table/rtb-045c8f3097f06a7f4",
            "id": "rtb-045c8f3097f06a7f4",
            "owner_id": "570394221768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0767483638ebabd30",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-vpc-public"
            },
            "tags_all": {
              "Name": "default-vpc-public",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d74dbd1f93dabfa",
            "route_table_id": "rtb-0a31b94b1214cd2c5",
            "subnet_id": "subnet-00bfbbab2da22ed13"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.private",
            "module.main.module.vpc.aws_subnet.private",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce9849a88c6229f",
            "route_table_id": "rtb-0a31b94b1214cd2c5",
            "subnet_id": "subnet-06c2bd7c76378e247"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.private",
            "module.main.module.vpc.aws_subnet.private",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936bd0182ed7b658",
            "route_table_id": "rtb-0a31b94b1214cd2c5",
            "subnet_id": "subnet-0c5df27bcc74f7c5f"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.private",
            "module.main.module.vpc.aws_subnet.private",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081fd370c71740d15",
            "route_table_id": "rtb-045c8f3097f06a7f4",
            "subnet_id": "subnet-0ef8926b427a98e74"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.public",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69baf0859932dde",
            "route_table_id": "rtb-045c8f3097f06a7f4",
            "subnet_id": "subnet-00ca0fd4c261bb6af"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.public",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008dda20a7f94db84",
            "route_table_id": "rtb-045c8f3097f06a7f4",
            "subnet_id": "subnet-094fafe10db7375d6"
          },
          "dependencies": [
            "module.main.module.vpc.aws_route_table.public",
            "module.main.module.vpc.aws_subnet.public",
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-00bfbbab2da22ed13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bfbbab2da22ed13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1a",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-06c2bd7c76378e247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c2bd7c76378e247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1b",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-0c5df27bcc74f7c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5df27bcc74f7c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1c",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-0ef8926b427a98e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef8926b427a98e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1a",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-00ca0fd4c261bb6af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca0fd4c261bb6af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1b",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:subnet/subnet-094fafe10db7375d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094fafe10db7375d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570394221768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1c",
              "env": "default"
            },
            "vpc_id": "vpc-04eef2ba34f26eaec"
          },
          "dependencies": [
            "module.main.module.vpc.aws_vpc.this",
            "module.main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:570394221768:vpc/vpc-04eef2ba34f26eaec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b033bb4473f25f0f",
            "default_route_table_id": "rtb-0f26b0472f7df7f1a",
            "default_security_group_id": "sg-0599e8afc3d0791ea",
            "dhcp_options_id": "dopt-0eb1400d3b38f7e6d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04eef2ba34f26eaec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f26b0472f7df7f1a",
            "owner_id": "570394221768",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc",
              "env": "default"
            }
          }
        }
      ]
    }
  ]
}